--- a/task-two-portfolio/index.html
+++ b/task-two-portfolio/index.html
@@ -7,6 +7,46 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <section class="first-section">
+        <div class="hero-left">
+            <h3>equalizer</h3>
+
+            <h1>We make your music sound extraordinary</h1>
+
+            <p>A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!</p>
+        </div>
+
+
+        <div>
+            <img src="images/bg-pattern-1.svg" alt="Description of the image">              
+        </div>
+    </section>
+
+
+    <section>
+        <div class="cta">
+            <div class="mobile-phone">
+                <img src="images/illustration-app.png" alt="">
+            </div>
+
+            <div class="premium">
+                <h3>Premium EQ</h3>
+
+                <p>Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!</p>
+
+                <p>$4 /month</p>
+
+                <button>
+                    <img src="images/icon-apple.svg" alt="apple icon">
+                    ios Download
+                </button>
+
+                <button>
+                    <img src="images/icon-android.svg" alt="apple icon">
+                    Android Download
+                </button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
