--- a/task-two-portfolio/index.html
+++ b/task-two-portfolio/index.html
@@ -34,17 +34,19 @@
 
                 <p>Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!</p>
 
-                <p>$4 /month</p>
+                <p><span>$4</span>  /month</p>
 
-                <button>
-                    <img src="images/icon-apple.svg" alt="apple icon">
-                    ios Download
-                </button>
-
-                <button>
-                    <img src="images/icon-android.svg" alt="apple icon">
-                    Android Download
-                </button>
+                <div class="btn-container">
+                    <button class="apple">
+                        <img src="images/icon-apple.svg" alt="apple icon">
+                        ios Download
+                    </button>
+    
+                    <button class="android">
+                        <img src="images/icon-android.svg" alt="apple icon">
+                        Android Download
+                    </button>
+                </div>
             </div>
         </div>
     </section>
